src/objects/Campaign_Report_Result__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Report_Header__c</fullName>
        <label>Campaign Report Header</label>
        <referenceTo>Campaign_Report_Header__c</referenceTo>
        <relationshipLabel>Campaign Report Results</relationshipLabel>
        <relationshipName>Campaign_Report_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Report Results</relationshipLabel>
        <relationshipName>Campaign_Report_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Campaign Report Results</relationshipLabel>
        <relationshipName>Campaign_Report_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Report Result</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Campaign Report Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Report Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>